finish read function

--- a/main/templates/list.html
+++ b/main/templates/list.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} {% block title %}
 Product List
+{% comment %} TODO make paginated {% endcomment %}
 {% endblock title %} 
 {% block content %}
 <h1>Product List</h1>
