updated user to reflect new foreignkey

--- a/main/templates/main/read.html
+++ b/main/templates/main/read.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block title %}
+{% extends 'main/base.html' %} 
+{% block title %}
 {{ product.name }}
 {% endblock title %} {% block content %}
 <h1>{{product.name}}</h1>
