--- a/main/templates/main/list.html
+++ b/main/templates/main/list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}
+{% extends 'main/base.html' %} {% block title %}
 Product List
 {% comment %} TODO make paginated {% endcomment %}
 {% endblock title %} 
