--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,11 +1,15 @@
 {% extends "main/base.html" %}
 
-{% block title %} Create an Account {% endblock %}
+{% block title %}
+Login
+{% endblock %}
+
 {% load crispy_forms_tags %}
 {% block content %}
     <form method="POST" class="form-group">
         {% csrf_token %}
         {{ form | crispy }}
-        <button type="submit" class="btn btn-success"> Register </button>
+        <button type="submit" class="btn btn-success"> Login </button>
+        <p> Don't have an account? <a href="/register"> Register here </a> </p>
     </form>
 {% endblock %}
