--- a/main/templates/main/product_form.html
+++ b/main/templates/main/product_form.html
@@ -2,18 +2,19 @@
 {% block title %} Create Product {% endblock %} 
 
 {% block content %} 
-<form method="post" action="/create/">
+<form method="post" action="{{product|yesno:"/update/,/create/"}}">
     {% csrf_token %}
     <p><label for="name">Product Name:</label>
-    <input type="text" name="name" id="name" required></p>
+    <input type="text" name="name" id="name" value="{{ product.name }}" required></p>
     <p><label for="description">Description:</label>
-    <textarea name="description" id="description" required></textarea></p>
+    <textarea name="description" id="description" required>{{ product.description }}</textarea></p>
     <p><label for="price">Price:</label>
-    <input type="number" name="price" id="price" step="0.01" required></p>
+    <input type="number" name="price" id="price" step="0.01" value="{{ product.price }}" required></p>
     <p><label for="quantity">Quantity:</label>
-    <input type="number" name="quantity" id="quantity" required></p>
+    <input type="number" name="quantity" id="quantity" value="{{ product.quantity }}" required></p>
     <p><label for="category_name">Category Name:</label>
     {% if categories %}
+        <input type="text" name="category_name" id="category_name" list="category_name" value="{{ product.category_id.name }}" required>
         <datalist name="category_name" id="category_name" required>
             {% for category in categories %}
                 <option value="{{ category.name }}">{{ category.name }}</option>
@@ -23,7 +24,10 @@
         <input type="text" name="category_name" id="category_name" required></p>
     {% endif %}
     <p><label for="category_description">Category Description:</label>
-    <textarea name="category_description" id="category_description"></textarea></p>
-    <button type="submit", name="save">Create New</button>
+    <textarea name="category_description" id="category_description">{{ product.category_id.description }}</textarea></p>
+    <button type="submit", name="save">{{product|yesno:"Update Product, Create Product"}}</button>
 </form>
-{% endblock content%}
+<script>
+
+</script>
+{% endblock content %}
