--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -21,6 +21,9 @@
       <li><a href="/update">Update Product</a></li>
       <li><a href="/delete">Delete Product</a></li>
       {% endif %}
+      {% if user.is_authenticated and user.user_type == "admin" %}
+      <li><a href="/delete_user">Delete User</a></li>
+      {% endif %}
     </ul>
     </nav>
     {% block content %} 
