--- a/main/templates/main/list.html
+++ b/main/templates/main/list.html
@@ -4,21 +4,32 @@ Product List
 {% endblock title %} 
 {% block content %}
 <h1>Product List</h1>
-{% if products %}
-    <dl>
-        {% for product in products %}
-            <dt><a href="/read/{{ product.product_id }}">{{ product.name }}</a></dt>
-            <dd>Description: {{ product.description }}</dd>
-            <dd>Price: {{ product.price }}</dd>
-            <dd>Quantity: {{ product.quantity }}</dd>
-            <dd>Seller: {{ product.seller_id }}</dd>
-            <dd>UUID: {{ product.product_id }}</dd>
-            <dd>Category: {{ product.category_id.name }}</dd>
-            <dd>Created At: {{ product.created_at }}</dd>
-            <dd>Updated At: {{ product.updated_at }}</dd>
-        {% endfor %}
-    </dl>
-{% else %}
+
+<dl>
+    {% for product in products %}
+        <dt><a href="/read/{{ product.product_id }}">{{ product.name }}</a></dt>
+        <dd>Description: {{ product.description }}</dd>
+        {% comment %} <dd>Price: {{ product.price }}</dd>
+        <dd>Quantity: {{ product.quantity }}</dd>
+        <dd>Seller: {{ product.seller_id }}</dd>
+        <dd>UUID: {{ product.product_id }}</dd>
+        <dd>Category: {{ product.category_id.name }}</dd>
+        <dd>Created At: {{ product.created_at }}</dd>
+        <dd>Updated At: {{ product.updated_at }}</dd> {% endcomment %}
+    {% endfor %}
+</dl>
+{% if products.has_previous %}
+    <a href="?page=1">&laquo First</a>
+    <a href="?page={{ products.previous_page_number }}">Previous</a>
+{% endif %}
+Page {{ products.number }} of {{ products.paginator.num_pages}}
+{% if products.has_next %}
+    <a href="?page={{ products.next_page_number }}">Next</a>
+    <a href="?page={{ products.paginator.num_pages }}">&raquo Last</a>
+{% endif %}
+
+{% if not products %}
     <p>No products available.</p>
 {% endif %}
+
 {% endblock content %}
